Added Upcoming Reads

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,7 +24,7 @@
                     <a class="page-scroll" href="#booksread">Books Read</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Upcoming Reads</a>
+                    <a class="page-scroll" href="#futurereads">Upcoming Reads</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#team">Members</a>
