--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
         {% include header.html %}
         {% include aboutus.html %}
         {% include booksread.html %}
+        {% include futurereads.html %}
         {% include jsfiles.html %}
     </body>
 </html>
