--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -604,7 +604,7 @@ section#contact .form-group input, section#contact .form-group textarea {
 
 footer {
     padding: 30px;
-    background-color: #000;    
+    
 }
 
 footer p {
@@ -715,6 +715,18 @@ font-size: 11px;
     font-size: 18px;
     padding: 20px 40px;
 }
+
+.button {
+    background-color: #4c4c4c; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline;
+    font-size: 16px;
+    margin: auto;
+  }
 
 /* Back to top button
 ---------------------------------- */
